--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,4 +19,9 @@ FetchContent_MakeAvailable(rtmidi)
 #        )
 add_library(launch_pad_mini_led SHARED Sources/LedController.cpp)
 
+# Spécifie le chemin d'inclusion pour cette bibliothèque lorsqu'elle est utilisée par d'autres projets.
+target_include_directories(launchpad PUBLIC
+        ${CMAKE_CURRENT_SOURCE_DIR}/Sources/Include
+        )
+
 target_link_libraries(launch_pad_mini_led PRIVATE rtmidi)
