--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ FetchContent_MakeAvailable(rtmidi)
 add_library(launch_pad_mini_led SHARED Sources/LedController.cpp)
 
 # Spécifie le chemin d'inclusion pour cette bibliothèque lorsqu'elle est utilisée par d'autres projets.
-target_include_directories(launchpad PUBLIC
+target_include_directories(launch_pad_mini_led PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}/Sources/Include
         )
 
